# mythical-mysfits-eks

./: README.md
workshop-1-k8s/: README-EKS.md  README.md  README2.md  cfn-output.json  core-k8s.yml
workshop-1-k8s/app/cdk/: app.py  pyproject.toml
workshop-1-k8s/app/manifests/: alb-ingress-controller.yaml  lab4.ingress.yml  like.lab4.draft.yml  like.lab4.yml  monolith-lab1.draft.yml  monolith-lab1.yml  monolith-lab3.yml  monolith-lab4.yml  monolith.lab1.draft.yml  monolith.lab2.draft.yml  monolith.lab3.draft.yml  monolith.lab4.draft.yml  monolith.yml
workshop-1-k8s/app/monolith-service/: Dockerfile  Dockerfile.draft  (+2 more)
workshop-1-k8s/cdk/: app.py  pyproject.toml
workshop-1-k8s/cdk/cdk.out/: ecr.template.json  ecrawscdkawseksClusterResourceProvider6438F36B.nested.template.json  ecrawscdkawseksKubectlProviderB60AAD32.nested.template.json  manifest.json  mythicalstack.template.json  mythicalstackawscdkawseksClusterResourceProvider642208DF.nested.template.json  mythicalstackawscdkawseksKubectlProvider3AD696F0.nested.template.json  tree.json
workshop-1-k8s/cdk/cdk.out/asset.c82ab631133fcbacba75e34003554476abe4d086d477fe4dc9c98fb25a6e5aff/: cfn-response.js  framework.js  outbound.d.ts  outbound.js  util.js
workshop-1-k8s/cdk/cdk.out/asset.fcbdc6836e088c135f093165f26ac77f803a8c9d544b5fbb39e19f8e0d731796/: cluster.js  common.js  fargate.js  index.js
workshop-1-k8s/cfn/: cloud9.yml
workshop-1-k8s/script/: associate-profile.sh  cfn-output.json  fetch-outputs  fetch-outputs.sh  install_kubectl  load-ddb.sh  setup  setup.sh  upload-site  upload-site.sh
(+10 files in other folders)
