[tool.poetry]
name = "EKSmonolith"
version = "0.1.0"
description = ""
authors = ["Sev <sev@amazon.com>"]




[tool.poetry.dependencies]
python = "^3.6"
aws-cdk-aws-ecr = "^1.42.0"
aws-cdk-aws-eks = "^1.50.0"
aws-cdk-aws-cloud9 = "^1.50.0"
boto3 = "^1.14.19"
aws-cdk-aws-dynamodb = "^1.51.0"
aws-cdk-aws-s3-deployment = "^1.51.0"
aws-cdk-core = "^1.51.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
